fix: 修复 Redis 缓存 List/PageResult 反序列化失败
- 缓存序列化改为 EVERYTHING + WRAPPER_ARRAY:顶层 List 也携带类型信息,
  此前列表类缓存(公告/分类/图书列表)读回时因顶层无类型标注而报错
- PageResult 补 @NoArgsConstructor,否则 Jackson 无法从缓存重建
- 被缓存方法返回 ArrayList 而非 .toList()(ListN 不可反序列化)
- 验证:公告/分类/图书分页/详情缓存读回全部正常,反序列化错误归零,19 测试全绿